data/derived/fa15/progs/unify/prog0339.ml.out
Characters 112-129:
  let seen' = if List.mem (h;seen)
                 ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> bool
       but an expression was expected of type bool
